--- a/index.html
+++ b/index.html
@@ -3,19 +3,10 @@
 <head>
   <script src="dependencies/p5.js"></script>
   <script src="dependencies/p5.riso.js"></script>
-  <script src="sketch.js"></script>
 </head>
 <body>
-    <script>
-    function setup(){
-        createCanvas(1000, 1000);
-      
-        let orange = new Riso("orange");
-        orange.stroke(255);
-        orange.strokeWeight(5);
-        orange.rect(50, 50, 200, 200);
-        drawRiso();
-      }
-    </script>
+	<!-- exchange this file name with any of the ones from the examples folder to see what it does -->
+	<!--<script src="./examples/my-first-example.js"></script>-->
+	<script src="./examples/several-objects.js"></script>
 </body>
 </html>
